2006-04-04  Bob Weigel  <rweigel@gmu.edu>

        * scripts/set/unique.m: Properly handle single column input when
	"rows" is specified.

2006-04-04  John W. Eaton  <jwe@octave.org>

	* path/setpath.m: New file.
	* path/savepath.m: Use setpath to set path instead of assigning
	directly to LOADPATH.

	* path/Makefile.in, path/addpath.m, path/rmpath.m, path/savepath.m:
	New files, adapted from Octave Forge by Keith Goodman
	<kwgoodman@gmail.com>.
	* path: New directory.
	* Makefile.in (SUBDIRS): Add it to the list.
	* configure.in (AC_CONFIG_FILES): Include path/Makefile here.

2006-04-02  David Bateman  <dbateman@free.fr>

	* general/tril.m, general.triu.m:
	Use resize (resize (x, 0), nr, nc) rather than zeros (nr, nc)
	to allow user types to work correctly.
	* special-matrix/hankel.m, special-matrix/toeplitz.m: Ditto.

2006-04-03  David Bateman  <dbateman@free.fr>

	* plot/grid.m: Cache the state of the grid to allow toggling.
	Accept keyword "minor" for minor grid.

2006-03-28  John W. Eaton  <jwe@octave.org>

	* general/isscalar.m: Only require that all dimensions are 1 for
	compatiblity.

2006-03-28  Bill Denney  <bill@givebillmoney.com>

	* general/isvector.m: Allow non-numeric objects to be vectors for
	compatibility.

2006-03-28  Keith Goodman  <kwgoodman@gmail.com>

	* plot/__errplot__.m: Doc string fix.

	* miscellaneous/doc.m: Mark as command.

	* general/isequal.m, general/__isequal__.m, general/cell2mat.m,
	general/isequalwithequalnans.m, general/blkdiag.m,
	strings/strfind.m, miscellaneous/doc.m: Update FSF address.
	
2006-03-27  Don Bindner  <dbindner@truman.edu>

	* plot/meshgrid.m: If nargout == 3 and vectors are supplied,
	return 3d matrices.

2006-03-27  Keith Goodman  <kwgoodman@gmail.com>

	* time/toc.m: Don't print "Elapsed time..." if tic has not been set.

2006-03-22  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Don't replot after popping terminal setting.

2006-03-20  John W. Eaton  <jwe@octave.org>
